--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,39 @@
-.header{
+.header {
   height: 200px;
   width: 100%;
-  background-color : #E9EEF6;
+  background-color: #e9eef6;
   padding-top: 50px;
 }
 
-.card-container{
+.card-container {
   height: 300px;
   width: 300px;
-  box-shadow: 0px 3px 50px #A5A5A5;
+  box-shadow: 0px 3px 50px #a5a5a5;
 }
 
-.card-wrapper{
-  width: 270px; 
-  height: 200px; 
-  box-shadow: 0px 3px 50px #A5A5A5;
+.card-wrapper {
+  width: 270px;
+  height: 200px;
+  box-shadow: 0px 3px 50px #a5a5a5;
   display: flex;
   flex-direction: column;
 }
 
-.card-top{
+.card-top {
   width: 100%;
   height: 2%;
 }
 
-.task-holder{
+.task-holder {
   width: 100%;
   height: 98%;
   padding: 10px 10px;
-  display : flex;
+  display: flex;
   flex-direction: column;
   position: relative;
 }
 
-.card-header{
+.card-header {
   margin-top: 10px;
   margin-bottom: 10px;
   max-width: 80px;
@@ -42,11 +42,11 @@
   text-align: center;
 }
 
-.task-container{
+.task-container {
   height: 600px;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  background-color: #F6F7F8;
-  padding : 40px 100px;
+  background-color: #f6f7f8;
+  padding: 40px 100px;
 }
