--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 }
 
 .card-wrapper {
+  gap: 2rem;
   width: 270px;
   height: 200px;
   box-shadow: 0px 3px 50px #a5a5a5;
@@ -43,6 +44,7 @@
 }
 
 .task-container {
+  gap: 1.6rem;
   height: 600px;
   width: 100%;
   display: flex;
